--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
   "homepage": "https://github.com/lubov15911/racco#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-changed": "^1.3.2",
-    "gulp-imagemin": "^3.1.1",
     "gulp-less": "^3.3.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-plumber": "^1.1.0",
-    "gulp-util": "^3.0.8"
+    "gulp-minify-css": "^1.2.4"
   }
 }
