--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-less": "^3.3.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4"
   }
 }
